Added Basic HTML/CSS Structure

--- a/Latex/bibliography/literature.bib
+++ b/Latex/bibliography/literature.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Wiebke Koepp at 2015-02-12 18:33:19 +0100 
+%% Created for Wiebke Koepp at 2015-02-16 14:23:18 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -75,11 +75,18 @@
 	Bdsk-Url-1 = {https://bjbell.wordpress.com/2012/09/24/solving-tangrams-using-jts/}}
 
 @article{eisenman64,
+	Annote = {\item create art-students prefer complex, often asymmartical polygons, while math-students prefer symmetrical ones
+\item Birgkhoff as mathematicians may have been biased towards simpler shapes when devising his formula
+\item results are "inconsistentwith an abjectivist viewpoint which maintains that there is something inherent within objects that makes them universally beautiful
+},
 	Author = {Eisenman,Russell and Coffee,Sandra},
 	Date-Added = {2015-02-01 18:50:33 +0000},
-	Date-Modified = {2015-02-01 18:52:27 +0000},
+	Date-Modified = {2015-02-16 12:40:23 +0000},
 	Journaltitle = {Journal of Psychology},
+	Keywords = {Aesthetics},
 	Pages = {375--378},
+	Rating = {2},
+	Read = {1},
 	Title = {Aesthetic Preferences of Art Students and Mathematics Students},
 	Volume = {58},
 	Year = {1964},
@@ -540,21 +547,37 @@
 	Year = {2010}}
 
 @book{elffers76,
+	Annote = {\item in Chinese: "Weisheitsbrett" or "Sieben-Schlau-Brett" or "Ch'i Ch'ae pan, where Ch'i Ch'ae refers to an ancient chinese custom where on the seventh day of the seventh month a thread is put through a needle with seven eyes for good luck
+\item convexity of tangrams and why there are only 13 convex tangram shapes (with formulas)
+\item mathematical grid-tangrams have a convexity-number (how many base triangles have to be added to a tangram shape in order to make it convex in the best case)
+\item many examples},
 	Author = {Joost Elffers},
 	Date-Added = {2015-01-19 18:40:30 +0000},
-	Date-Modified = {2015-01-20 11:57:48 +0000},
+	Date-Modified = {2015-02-16 12:56:06 +0000},
+	Keywords = {Examples, Features, History},
 	Publisher = {Du Mont},
+	Rating = {3},
+	Read = {1},
 	Title = {Tangram. Das alte chinesische Formenspiel},
 	Year = {1978}}
 
 @article{eberle14,
+	Annote = {\item study of children's aesthatics concering tessellations and comparison of mathematician's view on them
+\item critia usually mentioned by mathematicians when evaluating theorems or proofs: significance or depth, surprice, simplicity (clarity or elegance), connectedness and visual appeal 
+\item "aesthetic judgment depends on one's background knowledge"
+\item "mathematical aesthetics serves three roles in education: a motivational role, a generative role, and an evaluative role"
+\item experiment: let chilren create tessellations and talk about them and given ones (partially in groups); then analyze what they have been saying
+\item number of aestetic themes (in total 18) emerge from analysis, most often mentioned: Real World Connection, Color, Complexity, Uniqueness, Energy, Interconnectedness $\rightarrow$ "neither too simple nor too complex were usually the most interesting"
+\item additionally often mentioned by mathematicians (but not so often by children): Dimensionality, Symmetry, Surprise, Randomness
+\item children more confident when creating symmetric patterns, preferring convex shapes},
 	Author = {R. Scott Eberle},
 	Date-Added = {2015-01-19 18:38:00 +0000},
-	Date-Modified = {2015-02-12 17:33:08 +0000},
+	Date-Modified = {2015-02-16 09:37:59 +0000},
 	Journaltitle = {The Journal of Mathematical Behavior},
 	Keywords = {Aesthetics},
 	Pages = {129--143},
 	Rating = {3},
+	Read = {1},
 	Title = {The Role of Children's Mathematical Aesthetics: The Case of Tessellations},
 	Volume = {35},
 	Year = {2014},
@@ -580,19 +603,19 @@
 
 @article{deutsch72,
 	Addendum = {Edinburgh University Press},
-	Annote = {\item pieces are either three\item or four-sided -> reduces the number of common edges two or more pieces can share
+	Annote = {\item pieces are either three\item or four-sided $\rightarrow$ reduces the number of common edges two or more pieces can share
 \item proposed solution does not work for every tangram (puzzles with holes for example)
 \item combinatorics approach involves large amount of computation
 \item heuristic approach uses number of rules that are applied successively in a certain order
 \item based on splitting the puzzle in easier subpuzzles
-\item "number of corners or vertices of a tangram shape contains considerable information" -> less corners give less information about the structure and how pieces are placed -> solution for puzzles for 11 corners or more
+\item "number of corners or vertices of a tangram shape contains considerable information" $\rightarrow$ less corners give less information about the structure and how pieces are placed $\rightarrow$ solution for puzzles for 11 corners or more
 \item save tangram (Figure 4) as vertices' numbers and edge links (node \item (x,y) cords \item linked to node, edge length, direction)
-\item computation of so-called extension lines -> convex (location of a piece) and concave (location of a line connecting two pieces) type vertices -> disregard lines that are too short to support a puzzle piece or extension lines that are too close to a parallel edge
-\item multiple matching rules -> direct, trying to fit multiple pieces all at once (composites also only three\item or four-sided)
+\item computation of so-called extension lines $\rightarrow$ convex (location of a piece) and concave (location of a line connecting two pieces) type vertices $\rightarrow$ disregard lines that are too short to support a puzzle piece or extension lines that are too close to a parallel edge
+\item multiple matching rules $\rightarrow$ direct, trying to fit multiple pieces all at once (composites also only three\item or four-sided)
 \item possible hints on how to find all possible location for one puzzle piece (?)},
 	Author = {E. S. Deutsch and K. C. {Hayes Jr.}},
 	Date-Added = {2015-01-19 18:19:19 +0000},
-	Date-Modified = {2015-02-12 12:20:42 +0000},
+	Date-Modified = {2015-02-16 12:41:35 +0000},
 	Journaltitle = {Machine Intelligence},
 	Keywords = {Solution, Difficulty},
 	Number = {Bernard Meltzer and Donald Michie},
