--- a/Latex/bibliography/notes.tex
+++ b/Latex/bibliography/notes.tex
@@ -13,8 +13,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[sc]{mathpazo}
 \usepackage[american]{babel}
-\usepackage[%
-  backend=biber,
+\usepackage[backend=biber,
   url=false,
   style=reading,
   maxnames=4,
