First Buggy Generator Version

--- a/Latex/bibliography/literature.bib
+++ b/Latex/bibliography/literature.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Wiebke Koepp at 2015-02-16 14:23:18 +0100 
+%% Created for Wiebke Koepp at 2015-03-09 11:35:07 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -721,11 +721,10 @@
 	Addendum = {Springer},
 	Annote = {\item useful keywords for future search: prefence-learning to rank, prefernce-based, score-based
 \item some pointers to other learning to rank literature
-\item otherwise based on binary classification, thus probably not relevant here
-\item TODO: References},
+\item otherwise based on binary classification, thus probably not relevant here},
 	Author = {Ailon, Nir and Mohri, Mehryar},
 	Date-Added = {2015-01-19 17:25:29 +0000},
-	Date-Modified = {2015-02-12 13:34:58 +0000},
+	Date-Modified = {2015-03-09 10:34:28 +0000},
 	Journaltitle = {Machine Learning},
 	Keywords = {Ranking},
 	Number = {2--3},
@@ -834,25 +833,6 @@
 		<integer>0</integer>
 		<key>group name</key>
 		<string>4 - Sehr relevant</string>
-	</dict>
-	<dict>
-		<key>conditions</key>
-		<array>
-			<dict>
-				<key>comparison</key>
-				<integer>2</integer>
-				<key>key</key>
-				<string>Annote</string>
-				<key>value</key>
-				<string>TODO</string>
-				<key>version</key>
-				<string>1</string>
-			</dict>
-		</array>
-		<key>conjunction</key>
-		<integer>0</integer>
-		<key>group name</key>
-		<string>TODO</string>
 	</dict>
 	<dict>
 		<key>conditions</key>
