--- a/Latex/settings/packages.tex
+++ b/Latex/settings/packages.tex
@@ -13,7 +13,7 @@
   minnames=3,
   maxbibnames=99,
   firstinits,
-  uniquename=init]{biblatex} % TODO: adapt bibliography style
+  uniquename=init]{biblatex} 
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
@@ -25,4 +25,4 @@
 \usepackage[final]{microtype}
 \usepackage{caption}
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
-\usepackage[toc,nonumberlist,acronym]{glossaries} % TODO: remove if glossary not needed
+\usepackage[toc,nonumberlist,acronym]{glossaries} 
