Started New Random Generation

--- a/Latex/bibliography/literature.bib
+++ b/Latex/bibliography/literature.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Wiebke Koepp at 2015-03-09 11:35:07 +0100 
+%% Created for Wiebke Koepp at 2015-03-26 17:56:38 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -518,9 +518,10 @@
 @article{foxepstein14,
 	Author = {Fox-Epstein, Eli and Uehara, Ryuhei},
 	Date-Added = {2015-01-19 18:48:07 +0000},
-	Date-Modified = {2015-01-20 12:13:40 +0000},
+	Date-Modified = {2015-03-25 11:08:27 +0000},
 	Eprint = {arxiv: 1407.1923v1 [cs.CG]},
 	Eprinttype = {arxiv preprint},
+	Keywords = {Convexity},
 	Title = {The Convex Configurations of ``Sei Shonagon Chie no Ita'' and Other Dissection Puzzles},
 	Url = {http://arxiv.org/abs/1407.1923v1},
 	Year = {2014},
@@ -530,7 +531,8 @@
 	Author = {Filonik, Daniel and Baur, Dominikus},
 	Booktitle = {Information Visualisation, 2009 13th International Conference},
 	Date-Added = {2015-01-19 18:46:04 +0000},
-	Date-Modified = {2015-01-20 12:12:33 +0000},
+	Date-Modified = {2015-03-25 09:43:49 +0000},
+	Keywords = {Aesthetics},
 	Organization = {IEEE},
 	Pages = {579--584},
 	Title = {Measuring Aesthetics for Information Visualization},
@@ -540,7 +542,8 @@
 	Author = {Faria, Fabio F and Veloso, Adriano and Almeida, Humberto M and Valle, Eduardo and Torres, Ricardo da S and Gon{\c{c}}alves, Marcos A and Meira Jr, Wagner},
 	Booktitle = {Proceedings of the International Conference on Multimedia Information Retrieval},
 	Date-Added = {2015-01-19 18:44:55 +0000},
-	Date-Modified = {2015-01-20 11:58:13 +0000},
+	Date-Modified = {2015-03-25 09:38:21 +0000},
+	Keywords = {Ranking},
 	Organization = {ACM},
 	Pages = {285--294},
 	Title = {Learning to Rank for Content-Based Image Retrieval},
@@ -673,7 +676,8 @@
 	Author = {Galanter, Philip},
 	Booktitle = {ACM SIGGRAPH 2012 Courses},
 	Date-Added = {2015-01-19 17:48:53 +0000},
-	Date-Modified = {2015-01-19 17:56:55 +0000},
+	Date-Modified = {2015-03-25 16:08:10 +0000},
+	Keywords = {Aesthetics},
 	Pages = {14:1--14:162},
 	Publisher = {ACM},
 	Series = {SIGGRAPH '12},
