Implementation draft done

--- a/Latex/bibliography/literature.bib
+++ b/Latex/bibliography/literature.bib
@@ -2,12 +2,77 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Wiebke Koepp at 2015-03-26 17:56:38 +0100 
+%% Created for Wiebke Koepp at 2015-04-09 15:29:32 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@online{mongo,
+	Author = {{MongoDB, Inc.}},
+	Date-Added = {2015-04-09 13:06:51 +0000},
+	Date-Modified = {2015-04-09 13:28:41 +0000},
+	Title = {The MongoDB 2.4 Manual},
+	Url = {http://docs.mongodb.org/v2.4/},
+	Urlday = {9},
+	Urlmonth = {April},
+	Urlyear = {2015},
+	Year = {2015}}
+
+@online{node,
+	Author = {{Joyent, Inc.}},
+	Date-Added = {2015-04-09 13:05:35 +0000},
+	Date-Modified = {2015-04-09 13:28:32 +0000},
+	Title = {Node.js v0.12.2 Manual \& Documentation},
+	Url = {https://nodejs.org/api/},
+	Urlday = {9},
+	Urlmonth = {April},
+	Urlyear = {2015},
+	Year = {2014}}
+
+@online{w3c11,
+	Date-Added = {2015-04-09 09:53:19 +0000},
+	Date-Modified = {2015-04-09 09:56:12 +0000},
+	Day = {16},
+	Editor = {Cameron McCormack and Jonathan Watt and Doug Schepers and Anthony Grasso and Patrick Dengler and Jon Ferraiolo and Erik Dahlstr{\"{o}}m and Dean Jackson and Jun Fujisawa and Chris Lilley},
+	Month = {August},
+	Note = {Recommendation},
+	Organization = {W3C},
+	Title = {Scalable Vector Graphics (SVG) 1.1 (Second Edition)},
+	Url = {http://www.w3.org/TR/2011/REC-SVG11-20110816/},
+	Urlday = {9},
+	Urlmonth = {April},
+	Urlyear = {2015},
+	Year = {2011}}
+
+@online{w3c12,
+	Date-Added = {2015-04-09 07:36:23 +0000},
+	Date-Modified = {2015-04-09 07:57:47 +0000},
+	Day = {1},
+	Editor = {Ian Hickson},
+	Month = {May},
+	Note = {Candidate Recommendation},
+	Organization = {W3C},
+	Title = {Web Workers},
+	Url = {http://www.w3.org/TR/2012/CR-workers-20120501/},
+	Urlday = {9},
+	Urlmonth = {April},
+	Urlyear = {2015},
+	Year = {2012}}
+
+@online{mdn15,
+	Author = {{Mozilla Developer Network and individual contributors}},
+	Date-Added = {2015-04-09 07:27:21 +0000},
+	Date-Modified = {2015-04-09 13:29:12 +0000},
+	Day = {24},
+	Month = {March},
+	Title = {JavaScript},
+	Url = {https://developer.mozilla.org/en-US/docs/Web/JavaScript},
+	Urlday = {9},
+	Urlmonth = {April},
+	Urlyear = {2015},
+	Year = {2015}}
 
 @article{oflazer93,
 	Author = {Oflazer, Kemal},
