--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -1,7 +1,7 @@
 \RequirePackage[l2tabu,orthodox]{nag}
 
-\documentclass[headsepline,footsepline,footinclude=false,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc,BCOR=12mm,DIV=12]{scrbook} % two-sided
-%\documentclass[headsepline,footsepline,footinclude=false,oneside,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc]{scrbook} % one-sided
+%\documentclass[headsepline,footsepline,footinclude=false,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc,BCOR=12mm,DIV=12]{scrbook} % two-sided
+\documentclass[headsepline,footsepline,footinclude=false,oneside,fontsize=11pt,paper=a4,listof=totoc,bibliography=totoc]{scrbook} % one-sided
 
 \input{settings/packages}
 \input{settings/settings}
@@ -15,8 +15,7 @@
 
 \input{pages/title}
 \input{pages/disclaimer}
-\input{pages/acknowledgements}
-\input{pages/kurzfassung}
+%\input{pages/acknowledgements}
 \input{pages/abstract}
 \microtypesetup{protrusion=false}
 \tableofcontents{}
@@ -25,15 +24,17 @@
 \mainmatter{}
 
 \input{chapters/introduction}
-
-
+\input{chapters/background}
+\input{chapters/design}
+\input{chapters/implementation}
+\input{chapters/results}
+\input{chapters/conclusion}
 \appendix{}
 
 \microtypesetup{protrusion=false}
 \listoffigures{}
 \listoftables{}
 \microtypesetup{protrusion=true}
-\nocite{*}
 \printbibliography{}
 
 \end{document}
