--- a/Latex/pages/abstract.tex
+++ b/Latex/pages/abstract.tex
@@ -1,3 +1,9 @@
-\chapter{\abstractname}
+\chapter*{\abstractname}
+
+\begingroup
+\renewcommand{\cleardoublepage}{}
+\renewcommand{\clearpage}{}
+\chapter*{Kurzfassung}
+\endgroup
 
 
