--- a/Latex/settings/packages.tex
+++ b/Latex/settings/packages.tex
@@ -17,6 +17,7 @@
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
+\lstset{keepspaces=true}
 \usepackage{lstautogobble}
 \usepackage{tikz}
 \usepackage{pgfplots}
@@ -24,5 +25,6 @@
 \usepackage{booktabs}
 \usepackage[final]{microtype}
 \usepackage{caption}
+\usepackage{todonotes}
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
 \usepackage[toc,nonumberlist,acronym]{glossaries} 
