Database error fixed

--- a/Latex/settings/settings.tex
+++ b/Latex/settings/settings.tex
@@ -31,6 +31,14 @@
 \definecolor{TUMBeamerGreen}{rgb} {0.569,0.675,0.420}% RGB 145,172,107
 \definecolor{TUMBeamerLightGreen}{rgb} {0.710,0.792,0.510}% RGB 181,202,130
 
+\definecolor{Color7}{HTML}{F4E500}
+\definecolor{Color2}{HTML}{8CBB26}
+\definecolor{Color3}{HTML}{008E5B}
+\definecolor{Color4}{HTML}{2A71B0}
+\definecolor{Color5}{HTML}{6D398B}
+\definecolor{Color6}{HTML}{E32322}
+\definecolor{Color1}{HTML}{F18E1C}
+
 % Settings for pgfplots
 \pgfplotsset{compat=newest} 
 \pgfplotsset{
