--- a/Latex/settings/settings.tex
+++ b/Latex/settings/settings.tex
@@ -60,3 +60,4 @@
 \newcommand{\real}{\mathbb{R}}
 \newcommand{\compl}{\mathbb{C}}
 \newcommand{\whole}{\mathbb{Z}}
+\newcommand{\etal}{\textit{et al}.}
