--- a/Latex/bibliography/literature.bib
+++ b/Latex/bibliography/literature.bib
@@ -2,12 +2,43 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Wiebke Koepp at 2015-04-09 15:29:32 +0200 
+%% Created for Wiebke Koepp at 2015-04-10 16:32:27 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{richter11,
+	Address = {Berlin; Heidelberg},
+	Author = {J{\"u}rgen Richter-Gebert},
+	Date-Added = {2015-04-10 14:28:28 +0000},
+	Date-Modified = {2015-04-10 14:28:28 +0000},
+	Edition = {1st},
+	Publisher = {Springer},
+	Title = {{Perspectives on Projective Geometry: A Guided Tour Through Real and Complex Geometry}},
+	Year = {2011}}
+
+@book{cormen09,
+	Author = {Thomas H. Cormen and Charles E. Leiserson and Ronald L. Rivest and Clifford Stein},
+	Date-Added = {2015-04-10 05:30:27 +0000},
+	Date-Modified = {2015-04-10 05:35:07 +0000},
+	Edition = {3},
+	Publisher = {{MIT} Press},
+	Title = {Introduction to Algorithms},
+	Year = {2009},
+	Bdsk-Url-1 = {http://mitpress.mit.edu/books/introduction-algorithms}}
+
+@article{hormann01,
+	Author = {Hormann, Kai and Agathos, Alexander},
+	Date-Added = {2015-04-10 04:48:21 +0000},
+	Date-Modified = {2015-04-10 04:49:01 +0000},
+	Journaltitle = {Computational Geometry},
+	Number = {3},
+	Pages = {131--144},
+	Title = {The Point in Polygon Problem for Arbitrary Polygons},
+	Volume = {20},
+	Year = {2001}}
 
 @online{mongo,
 	Author = {{MongoDB, Inc.}},
@@ -18,7 +49,8 @@
 	Urlday = {9},
 	Urlmonth = {April},
 	Urlyear = {2015},
-	Year = {2015}}
+	Year = {2015},
+	Bdsk-Url-1 = {http://docs.mongodb.org/v2.4/}}
 
 @online{node,
 	Author = {{Joyent, Inc.}},
@@ -29,7 +61,8 @@
 	Urlday = {9},
 	Urlmonth = {April},
 	Urlyear = {2015},
-	Year = {2014}}
+	Year = {2014},
+	Bdsk-Url-1 = {https://nodejs.org/api/}}
 
 @online{w3c11,
 	Date-Added = {2015-04-09 09:53:19 +0000},
@@ -44,7 +77,8 @@
 	Urlday = {9},
 	Urlmonth = {April},
 	Urlyear = {2015},
-	Year = {2011}}
+	Year = {2011},
+	Bdsk-Url-1 = {http://www.w3.org/TR/2011/REC-SVG11-20110816/}}
 
 @online{w3c12,
 	Date-Added = {2015-04-09 07:36:23 +0000},
@@ -59,7 +93,8 @@
 	Urlday = {9},
 	Urlmonth = {April},
 	Urlyear = {2015},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {http://www.w3.org/TR/2012/CR-workers-20120501/}}
 
 @online{mdn15,
 	Author = {{Mozilla Developer Network and individual contributors}},
@@ -72,7 +107,8 @@
 	Urlday = {9},
 	Urlmonth = {April},
 	Urlyear = {2015},
-	Year = {2015}}
+	Year = {2015},
+	Bdsk-Url-1 = {https://developer.mozilla.org/en-US/docs/Web/JavaScript}}
 
 @article{oflazer93,
 	Author = {Oflazer, Kemal},
