--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -33,7 +33,12 @@
 
 \microtypesetup{protrusion=false}
 \listoffigures{}
+\begingroup
+\renewcommand{\cleardoublepage}{}
+\renewcommand{\clearpage}{}
 \listoftables{}
+\endgroup
+
 \microtypesetup{protrusion=true}
 \printbibliography{}
 
