--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -6,7 +6,9 @@
 \input{settings/packages}
 \input{settings/settings}
 \input{settings/commands}
-
+%\usepackage{caption}
+%\usepackage{subcaption}
+\usepackage[caption=false]{subfig}
 \begin{document}
 
 \input{pages/cover}
