--- a/Latex/figures/segments.tex
+++ b/Latex/figures/segments.tex
@@ -16,6 +16,6 @@
 \draw(2.5, -0.3) node{C};
 \draw (0.5,4.8) node{D};
 \end{tikzpicture}
-\ref{segments}
 \caption{Intersecting line segments}
+\label{segments}
 \end{figure}
